--- a/pertemuan2/healty.html
+++ b/pertemuan2/healty.html
@@ -34,6 +34,7 @@
 
         <div class="intro" id="About">
             <div class="desc">
+                <img src="img/Group 237507.jpg" alt="">
                <p>
                 Kenalan sama kita yuk <br />
                 Dear Carefriends,terima kasih telah membersamai kami sejak tahun
@@ -47,21 +48,25 @@
     </main>
     <footer>
         <div class="footer">
-             <img src="img/Group 237507.jpg" alt="">
              <h3>Kamu lagi sakit? 
                 <b>HealthGo</b> solusinya. tanpa
                 antri, tanpa ribet, konsultan aja! 
              </h3>
-            <p style="margin-top: 30px;">Contact Us</p>
+             <h4>
+                <b>Contact Us</b>
+             </h4>
              <div class="sosmed">
                   <a href="#">
-                    <img src="img/download.jpeg" height="35">
+                    <img src="img/733547.png" height="35">
                   </a>
                   <a href="#">
-                    <img src="img/download.png" height="35">
+                    <img src="img/2111463.png" height="35">
                   </a>
                   <a href="#">
-                    <img src="img/image.jpeg" height="35">
+                    <img src="img/1384060.png" height="35">
+                  </a>
+                  <a href="#">
+                    <img src="img/whatsapp.png" height="35">
                   </a>
              </div>
         </div>
